--- a/app/src/main/res/layout/team_stats_tab_leaderboard.xml
+++ b/app/src/main/res/layout/team_stats_tab_leaderboard.xml
@@ -4,15 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Team Statistics"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:id="@+id/teamStatsTitle"
-        />
-
     <android.support.v7.widget.ButtonBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,24 +32,30 @@
             android:onClick="goToLeaderboardTS"
             android:text="Leaderboard" />
     </android.support.v7.widget.ButtonBarLayout>
-
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Team Statistics Leaderboard"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:text="Team stats leaderboard"
-        android:textSize="20sp"/>
+        android:id="@+id/teamStatsTitle"
+        android:padding="10dp"
+        />
+
+
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fixtureSpinner">
+        android:id="@+id/fixtureSpinner"
+        android:padding="10dp">
 
     </Spinner>
 
 
 
     <ScrollView
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView">
