--- a/app/src/main/res/layout/team_stats_tab_overview.xml
+++ b/app/src/main/res/layout/team_stats_tab_overview.xml
@@ -4,14 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Team Statistics"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:id="@+id/teamStatsTitle"
-        />
 
     <android.support.v7.widget.ButtonBarLayout
         android:layout_width="match_parent"
@@ -42,11 +34,21 @@
             android:text="Leaderboard" />
     </android.support.v7.widget.ButtonBarLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="Team stats overview"
-        android:textSize="20sp"/>
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Team Statistics Overview"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:id="@+id/teamStatsTitle"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
