--- a/app/src/main/res/layout/log_game_stats.xml
+++ b/app/src/main/res/layout/log_game_stats.xml
@@ -230,5 +230,13 @@
 
     </GridLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Done"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:onClick="onDone"/>
+
 
 </RelativeLayout>
