adding dropgoal and penalty

--- a/app/src/main/res/layout/fixture_stats_summary_activity.xml
+++ b/app/src/main/res/layout/fixture_stats_summary_activity.xml
@@ -30,7 +30,12 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tableLayout"></TableLayout>
+                android:id="@+id/tableLayoutKPI"></TableLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/teamStatsOutputTV"/>
 
             <TextView
                 android:layout_width="wrap_content"
