--- a/app/src/main/res/layout/select_kpi_activity.xml
+++ b/app/src/main/res/layout/select_kpi_activity.xml
@@ -85,7 +85,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Unsuccesful Pass"
+            android:text="Unsuccessful Pass"
             android:id="@+id/buttonTriesScored"/>
 
         <Button
