--- a/app/src/main/res/layout/log_game_stats.xml
+++ b/app/src/main/res/layout/log_game_stats.xml
@@ -244,8 +244,8 @@
         android:id="@+id/bottomGrid"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
-        android:columnCount="5"
-        android:rowCount="2">
+        android:columnCount="4"
+        android:rowCount="3">
 
         <Button
             android:id="@+id/buttonTRY"
@@ -257,15 +257,15 @@
 
         <Button
             android:id="@+id/buttonOTRY"
-            android:layout_column="0"
-            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_row="0"
             android:layout_gravity="top"
             android:textSize="10sp"
             android:text="Try Against" />
 
         <Button
             android:id="@+id/buttonCON"
-            android:layout_column="1"
+            android:layout_column="2"
             android:layout_row="0"
             android:textSize="10sp"
             android:layout_gravity="top"
@@ -273,31 +273,31 @@
 
         <Button
             android:id="@+id/buttonOCON"
-            android:layout_column="1"
-            android:layout_row="1"
+            android:layout_column="3"
+            android:layout_row="0"
             android:layout_gravity="top"
             android:textSize="10sp"
             android:text="Conversion Against" />
 
         <Button
             android:id="@+id/buttonSCRUM"
-            android:layout_column="2"
-            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_row="1"
             android:textSize="10sp"
             android:layout_gravity="top"
             android:text="Scrum Won" />
 
         <Button
             android:id="@+id/buttonOSCRUM"
-            android:layout_column="2"
+            android:layout_column="1"
             android:layout_row="1"
             android:textSize="10sp"
             android:layout_gravity="top"
             android:text="Scrum Lost" />
         <Button
             android:id="@+id/buttonLO"
-            android:layout_column="3"
-            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_row="1"
             android:layout_gravity="top"
             android:textSize="10sp"
             android:text="Line Out Won" />
@@ -312,19 +312,51 @@
 
         <Button
             android:id="@+id/buttonMAUL"
-            android:layout_column="4"
-            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_row="2"
             android:textSize="10sp"
             android:layout_gravity="top"
             android:text="Maul Won" />
 
         <Button
             android:id="@+id/buttonOMAUL"
-            android:layout_column="4"
-            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_row="2"
             android:textSize="10sp"
             android:layout_gravity="top"
             android:text="Maul Lost" />
+
+        <Button
+            android:id="@+id/buttonDG"
+            android:layout_column="2"
+            android:layout_row="2"
+            android:textSize="10sp"
+            android:layout_gravity="top"
+            android:text="Our Drop Goal" />
+
+        <Button
+            android:id="@+id/buttonODG"
+            android:layout_column="3"
+            android:layout_row="2"
+            android:textSize="10sp"
+            android:layout_gravity="top"
+            android:text="Their Drop Goal" />
+
+        <Button
+            android:id="@+id/buttonPK"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:textSize="10sp"
+            android:layout_gravity="top"
+            android:text="Penalty Kick" />
+
+        <Button
+            android:id="@+id/buttonOPK"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:textSize="10sp"
+            android:layout_gravity="top"
+            android:text="Their Penalty Kick"" />
 
 
     </GridLayout>
