--- a/app/src/main/res/layout/log_game_stats.xml
+++ b/app/src/main/res/layout/log_game_stats.xml
@@ -245,7 +245,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
         android:columnCount="4"
-        android:rowCount="3">
+        android:rowCount="4">
 
         <Button
             android:id="@+id/buttonTRY"
@@ -332,7 +332,7 @@
             android:layout_row="2"
             android:textSize="10sp"
             android:layout_gravity="top"
-            android:text="Our Drop Goal" />
+            android:text="Drop Goal" />
 
         <Button
             android:id="@+id/buttonODG"
@@ -345,7 +345,7 @@
         <Button
             android:id="@+id/buttonPK"
             android:layout_column="0"
-            android:layout_row="2"
+            android:layout_row="3"
             android:textSize="10sp"
             android:layout_gravity="top"
             android:text="Penalty Kick" />
@@ -353,20 +353,24 @@
         <Button
             android:id="@+id/buttonOPK"
             android:layout_column="1"
-            android:layout_row="2"
+            android:layout_row="3"
             android:textSize="10sp"
             android:layout_gravity="top"
-            android:text="Their Penalty Kick"" />
+            android:text="Their Penalty Kick" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Done"
+            android:layout_column="2"
+            android:layout_columnSpan="2"
+            android:layout_row="3"
+            android:id="@+id/doneButton"
+            android:onClick="onDone"/>
 
     </GridLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Done"
-        android:layout_alignParentEnd="true"
-        android:onClick="onDone"/>
+
 
 
 </RelativeLayout>
