--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome to app name"
+            android:text="Welcome to RUMMA"
             android:textSize="30sp"
             android:textStyle="bold"
             android:paddingBottom="10dp"
