--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -158,8 +158,9 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center|left"
                 android:id="@+id/noticepng"
+                android:tint="@color/colorPrimary"
                 android:src="@drawable/ic_chat_black_24dp"/>
 
             <TextView
@@ -167,6 +168,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Notices"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15sp"/>
         </LinearLayout>
 
@@ -185,6 +187,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/statpng"
+                android:tint="@color/colorPrimary"
                 android:src="@drawable/ic_trending_up_black_24dp"/>
 
             <TextView
@@ -192,6 +195,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Statistics"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15sp"/>
         </LinearLayout>
 
@@ -203,13 +207,15 @@
             android:layout_above="@+id/members_home_button"
             android:layout_alignParentRight="true"
             android:onClick="onGoToLog"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/logpng"
-                android:layout_gravity="center_horizontal"
+                android:tint="@color/colorPrimary"
+                android:layout_gravity="center|right"
                 android:src="@drawable/ic_note_add_black_24dp"/>
 
             <TextView
@@ -217,6 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Log"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15sp"/>
         </LinearLayout>
 
@@ -233,16 +240,20 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center|left"
                 android:id="@+id/calpng"
-                android:src="@drawable/ic_today_black_24dp"/>
+                android:src="@drawable/ic_today_black_24dp"
+                android:tint="@color/colorPrimary"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Calendar"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimary"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -260,14 +271,18 @@
                 android:layout_height="match_parent"
                 android:id="@+id/galpng"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/ic_collections_black_24dp"/>
+                android:src="@drawable/ic_collections_black_24dp"
+                android:tint="@color/colorPrimary"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Gallery"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textColor="@color/colorPrimary"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -283,15 +298,18 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center|right"
                 android:id="@+id/mempng"
-                android:src="@drawable/ic_people_black_24dp"/>
+                android:src="@drawable/ic_people_black_24dp"
+                android:tint="@color/colorPrimary"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center|right"
                 android:text="Members"
+                android:textColor="@color/colorPrimary"
                 android:textSize="15sp"/>
         </LinearLayout>
 
