--- a/app/src/main/res/layout/statistics_activity.xml
+++ b/app/src/main/res/layout/statistics_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <TextView
@@ -13,51 +14,60 @@
         android:textSize="30sp"/>
         />
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/stats_title">
+        android:id="@+id/teamStatsButton"
+        android:orientation="vertical"
+        android:clickable="true"
+        android:onClick="goTeamStats"
+        android:background="@color/colorPrimary">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
+            android:layout_gravity="center_horizontal"
+            android:text="Team Statistics"
+            android:textSize="20dp"/>
+    </LinearLayout>
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/stats_title"
-                android:text="Team Stats"
-                android:textSize="30dp"
-                android:id="@+id/teamStatsButton"
-                android:onClick="goTeamStats"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/myStatsButton"
+        android:orientation="vertical"
+        android:clickable="true"
+        android:onClick="goMyStats"
+        android:visibility="invisible"
+        android:background="@color/colorAccent">
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/teamStatsButton"
-                android:text="My Stats"
-                android:textSize="30dp"
-                android:id="@+id/myStatsButton"
-                android:onClick="goMyStats"
-                android:visibility="invisible"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="My Statistics"
+            android:textSize="20dp"/>
+    </LinearLayout>
 
 
-            <Button
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/myStatsButton"
-                android:text="Analyse"
-                android:textSize="30dp"
-                android:id="@+id/analyseButton"
-                android:onClick="goAnalyseStats"
-                android:visibility="invisible"/>
-        </LinearLayout>
-    </ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/analyseButton"
+        android:orientation="vertical"
+        android:clickable="true"
+        android:onClick="goAnalyseStats"
+        android:visibility="invisible"
+        android:background="@color/colorPrimaryDark">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Analyse Statistics"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
 
 
     <Button
@@ -65,9 +75,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/notice_back_button"
         android:text="Back"
+        android:layout_gravity="bottom|left"
         android:onClick="onBackButton"
         android:layout_alignParentBottom="true"/>
 
 
 
-</RelativeLayout>
+</LinearLayout>
